[package]
name = "soccer"
version = "0.0.1"
edition = "2021"

authors = ["Arthur Lafrance <lafrancearthur@gmail.com>"]
description = "Associated constants for enums"
license = "MIT"
readme = "README.md"
repository = "https://github.com/a-lafrance/soccer"
keywords = ["enum", "constant", "derive", "discriminant", "codegen"]

[dependencies]
quote = "1.0.31"
syn = { version = "2.0.26", features = ["full"] }

[lib]
proc-macro = true
